--- a/SuperSkill/CSS Essentials/CSS Project/styles.css
+++ b/SuperSkill/CSS Essentials/CSS Project/styles.css
@@ -1,7 +1,6 @@
 body {
     margin: 20px;
-    padding: 0;
-    box-sizing: border-box;
+    background-color: goldenrod;
 }
 nav ul li {
     /* setting display to inline */
@@ -16,4 +15,13 @@ nav {
     background-color: crimson;
     margin: 0;
     padding-top: 1px;
+}
+.container {
+    display: grid;
+    grid-column: 50px 50px;
+}
+footer {
+    background-color: crimson;
+    text-align: right;
+    padding: 5px;
 }
